--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,17 @@ name = "kuaidaili"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+simple = []
+sign = ["base64"]
+default = ["simple"]
 
 [dependencies]
-base64 = "0.13.0"
-reqwest = "0.11.4"
+base64 = { version = "0.13.0", optional = true }
+chrono = "0.4.19"
+derive_builder = "0.10.2"
+reqwest = { version = "0.11.4", features = ["json"] }
+serde = { version = "1.0.127", features = ["derive"] }
+serde_json = "1.0.66"
 thiserror = "1.0.26"
+typenum = "1.13.0"
