--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,10 @@ derive_builder = "0.10.2"
 reqwest = { version = "0.11.4", features = ["json"] }
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
+serde_qs = "0.8.4"
 thiserror = "1.0.26"
-typenum = "1.13.0"
+
+[dev-dependencies]
+anyhow = "1.0.42"
+insta = "1.7.1"
+tokio = { version = "1.10.0", features = ["full"] }
